# polynoms

./: CMakeLists.txt  README.md
src/: base_table.cpp  base_table.h  hash_table_linear.cpp  hash_table_linear.h  hash_table_on_lists.cpp  hash_table_on_lists.h  interface.cpp  interface.h  linear_table.cpp  linear_table.h  linear_table_on_lists.cpp  linear_table_on_lists.h  list.cpp  main.cpp  ordered_line_table.cpp  ordered_line_table.h  polynom.cpp  polynom.h  postfix.cpp  postfix.h  tree_table.cpp  tree_table.h
test/: test_hash_table_linear.cpp  test_hash_table_on_lists.cpp  test_linear_table.cpp  test_linear_table_on_lists.cpp  test_list.cpp  test_ordered_line_table.cpp  test_polynom.cpp  test_postfix.cpp  test_stack.cpp  test_tree_table.cpp
